# RPGGame

./: .gitignore  .gitmodules  CMakeLists.txt
.github/workflows/: linux_build.yaml  windows_build.yaml
client/: Makefile  game.cpp  game_hud.cpp  game_state.cpp  loading.cpp  main.cpp  map.cpp  player.cpp  screens.cpp
client/include/: audio.h  extra.h  game.h  game_hud.h  game_state.h  loading.h  main.h  player.h  screens.h
libs/net/: enet_client.cpp  enet_server.cpp  format.cpp  serialize.cpp  serialize.fbs
libs/net/include/: net.h  serialize_generated.h
libs/net/test/: main.cpp
server/: main.cpp
